Fix issue with Card Balance Alignment

--- a/src/app/components/pages/services/mobile/mobile-tracket/card/card.component.css
+++ b/src/app/components/pages/services/mobile/mobile-tracket/card/card.component.css
@@ -97,6 +97,7 @@
 .balance {
   font-size: 1.3rem;
   font-weight: bold;
+  line-height: 1;
 }
 
 .number {
